# Studies-PG-Public

Advanced Ai Technics/: Lab5.ipynb  Lab5_Experiments.ipynb  lab5.py  lab6.py  readme.md
Advanced Ai Technics/lab1/: Lab1.ipynb
Advanced Ai Technics/lab2/: Lab2.ipynb
Advanced Ai Technics/lab3/: Lab3.ipynb
Advanced Ai Technics/lab4/: data_processing.py  full_batch_training.py  models.py  sampling_training.py
Advanced Ai Technics/lab5/: Lab5.ipynb  Lab5_Experiments.ipynb
Advanced Ai Technics/lab6/: lab6.ipynb
Advanced Ai Technics/lab7/: lab7.ipynb  lab7.py
Automation of Business Processes/: Conclusions-AoBP.docx  readme.md  s207250-Modified.vpp  s207250-Original.vpp
High Availability Distributed Systems/: .gitignore  docker-compose-cluster.yml  docker-compose.yml  readme.md
High Availability Distributed Systems/account-manager/: Dockerfile  Program.cs  account-manager.csproj  account-manager.http  account-manager.sln  appsettings.json  docker-compose.yml
High Availability Distributed Systems/analytics-service/: Dockerfile  Program.cs  README.md  analytics-service.csproj  appsettings.Development.json  appsettings.json
High Availability Distributed Systems/changes-manager/: Dockerfile  Program.cs  changes-manager.csproj
High Performance Computing Systems/: readme.md
Multi-Objective Optimization Algorithms/: readme.md
Multi-Objective Optimization Algorithms/Lab6/: CMakeLists.txt  MOOA6.cpp  Makefile  optimization_results.csv  paradiseo_sample.cpp  plot_results.py
Systems with Machine Learning/: EvaluateModel.py  ModelTesting.py  readme.md
(+171 files in other folders)
